alignment issues 2

--- a/Photos/photos.css
+++ b/Photos/photos.css
@@ -11,8 +11,8 @@
 body{
     font-family: 'Noto Sans', sans-serif;
     background-color: var(--bg-color);
-    margin: 0;
     padding: 0;
+    margin-top: 50px;
 }
 #bulbimg{
     width: 150px;
@@ -55,7 +55,7 @@ body{
     top: 0;
     left: 0;
     right: 0;
-    z-index: 1000;
+    z-index: 3000;
 }
 
 .nav-links {
